--- a/product.html
+++ b/product.html
@@ -67,7 +67,7 @@
 
         <div class="products">
           <div class="product-selected">
-            <h6 class="viewed-item">Home  »  Apparel  »  Women  » <span>Peeky Cropped</span></h6>
+            <h6 class="viewed-item"><a href="#">Home</a>  »  <a href="#">Apparel</a>  »  <a href="#">Women</a>  » <span>Peeky Cropped</span></h6>
             <div class="viewed-product">
                 <div class="item">
                   <div class="item-prevue">
