--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               <a href="#"><span class="googleplus-foot"></span></a>
               <a href="#"><span class="tumblr-foot"></span></a>
               <a href="#"><span class="instagram-foot"></a>
-              <a href="#"><span class="rss-foot"></span></a>
+              <a href="#"><img src="/index-img/rss foot.png" class="rss-foot"></a>
             </div>
           </div>
         </div>
