--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link rel="icon" href="/index-img/surfhouse logo fav.png" type="image/png" />
     <title>SURFHOUSE</title>
   </head>
@@ -26,8 +27,8 @@
       </header>
 
     <div class="site-content">
-      <div class="sidebar-product">
-        <div class="sidebar">
+      <div class="sidebar-products">
+        <div class="sidebar-p">
           <h4><span>MENU</span></h4>
           <ul class="menu">
             <li><span><a href="#">ABOUT</a></span></li>
@@ -56,7 +57,7 @@
             <li><span><a href="#">GADGETS</a></span></li>
             <li><span><a href="#">CANTACT</a></span></li>
           </ul>
-          <div class="annonce">
+          <div class="annonce-p">
             <h4>
               NOW<br />
               IS<br />
@@ -65,7 +66,7 @@
           </div>
         </div>
 
-        <div class="products">
+        <div class="product-p">
           <div class="product-selected">
             <h6 class="viewed-item"><a href="#">Home</a>  »  <a href="#">Apparel</a>  »  <a href="#">Women</a>  » <span>Peeky Cropped</span></h6>
             <div class="viewed-product">
@@ -263,7 +264,7 @@
               <a href="#"><span class="googleplus-foot"></span></a>
               <a href="#"><span class="tumblr-foot"></span></a>
               <a href="#"><span class="instagram-foot"></a>
-              <a href="#"><span class="rss-foot"></span></a>
+              <a href="#"><img src="/index-img/rss foot.png" class="rss-foot"></a>
             </div>
           </div>
         </div>
