--- a/shop-grid.html
+++ b/shop-grid.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/shop-grid.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/fonts/fontawesome-free-5.14.0-web/css/all.css" />
     <link rel="icon" href="/index-img/surfhouse logo fav.png" type="image/png" />
     <title>SURFHOUSE</title>
@@ -65,7 +66,7 @@
                     <li><span><a href="#">GADGETS</a></span></li>
                     <li><span><a href="#">CANTACT</a></span></li>
                   </ul>
-                  <div class="annonce">
+                  <div class="annonce-grid">
                     <h4>
                       NOW<br />
                       IS<br />
@@ -290,7 +291,7 @@
                       <a href="#"><span class="googleplus-foot"></span></a>
                       <a href="#"><span class="tumblr-foot"></span></a>
                       <a href="#"><span class="instagram-foot"></a>
-                      <a href="#"><span class="rss-foot"></span></a>
+                      <a href="#"><img src="/index-img/rss foot.png" class="rss-foot"></a>
                     </div>
                   </div>
                 </div>
