--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/fonts/fontawesome-free-5.14.0-web/css/all.css" />
     <link rel="icon" href="/index-img/surfhouse logo fav.png" type="image/png" />
     <title>SURFHOUSE</title>
@@ -16,7 +17,7 @@
                 <div class="logo">
                   <img src="/index-img/surfhouse logo.png" alt="surfhouse logo" />
                 </div>
-                <div class="icons">
+                <div class="icons-c">
                   <a href="#"><img src="/index-img/facebook icon.png" alt="facebook" /></a>
                   <a href="#"><img src="/index-img/twitter icon.png" alt="twitter" /></a>
                   <a href="#"><img src="/index-img/youtube icon.png" alt="youtube" /></a>
@@ -28,7 +29,7 @@
 
         <div class="site-content">
             <div class="sidebar-contact">
-                <div class="sidebar">
+                <div class="sidebar-c">
                   <h4><span>MENU</span></h4>
                   <ul class="menu">
                     <li><span><a href="#">ABOUT</a></span></li>
@@ -57,7 +58,7 @@
                     <li><span><a href="#">GADGETS</a></span></li>
                     <li><span><a href="#">CANTACT</a></span></li>
                   </ul>
-                  <div class="annonce">
+                  <div class="annonce-c">
                     <h4>
                       NOW<br />
                       IS<br />
@@ -99,7 +100,7 @@
                       </div>
                     </div>
                   <div class="wrapper wrapper-brands">
-                    <div class="brands"><img src="./contact-img/brands.png" alt="brands" /></div>
+                    <div class="brands-c"><img src="./contact-img/brands.png" alt="brands" /></div>
                   </div> 
                 </div>
             </div>
