--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 
     <div class="site">
         <header class="container">
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae00ad31d70cf583c8fccd3987cede5dafcda11378f83d6a780b684a4bf492e88&amp;width=100%25&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
             <div class="wrapper wrapper-head">
                 <div class="logo">
                   <img src="/index-img/surfhouse logo.png" alt="surfhouse logo" />
